--- a/opinionpg2.html
+++ b/opinionpg2.html
@@ -36,7 +36,7 @@
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item fw-bolder navbar-bolder"><a class="nav-link" href="homepage1.html">Front News</a></li>
+                        <li class="nav-item fw-bolder navbar-bolder"><a class="nav-link" href="index.html">Front News</a></li>
                         <li class="nav-item fw-bolder navbar-bolder"><a class="nav-link" href="announcements.html">Announcements</a></li>
                         <li class="nav-item fw-bolder navbar-bolder"><a class="nav-link" href="sportspg.html">Sports</a></li>
                         <li class="nav-item fw-bolder navbar-bolder"><a class="nav-link" href="opinionpg1.html">Opinion</a></li>
