--- a/homepage2.html
+++ b/homepage2.html
@@ -93,8 +93,8 @@
                     <nav aria-label="Pagination">
                         <hr class="my-0" />
                         <ul class="pagination justify-content-center my-4">
-                          <li class="page-item" aria-current="page"><a class="page-link" href="homepage1.html"> << </a></li>
-                            <li class="page-item" aria-current="page"><a class="page-link" href="homepage1.html">1</a></li>
+                          <li class="page-item" aria-current="page"><a class="page-link" href="index.html"> << </a></li>
+                            <li class="page-item" aria-current="page"><a class="page-link" href="index.html">1</a></li>
                             <li class="page-item active"><a class="page-link" href="homepage2.html">2</a></li>
                             <li class="page-item"><a class="page-link" href="homepage3.html">3</a></li>
                             <li class="page-item" aria-current="page"><a class="page-link" href="homepage3.html"> >> </a></li>
