--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                                   <div class="small text-muted">January 28 2022</div>
                                   <h2 class="card-title h4 fw-normal">Robredo isusulong ang ligtas na balik-eskuwela sa pandemya</h2>
                                   <p class="card-text fw-lighter">Edukasyon sa gitna at pagkatapos ng pandemya ang pinagtuunan ng pansin ni presidential aspirant Leni Robredo sa kaniyang pagharap sa mga estudyante ng Mapua University. Giit ni Robredo, dapat isulong ang ligtas na balik-eskuwela. Nagpa-Patrol, Adrian Ayalin. TV Patrol, Biyernes, 28 Enero 2022</p>
-                                  <a class="btn btn-warning fw-light" href="Front news 9.html">Read more →</a>
+                                  <a class="btn btn-warning fw-light" href="Front News 9.html">Read more →</a>
                               </div>
                           </div>
                           <!-- Blog post-->
@@ -77,7 +77,7 @@
                                   <div class="small text-muted">December 29, 2021</div>
                                   <h2 class="card-title h4 fw-normal"> 79 of 142 takers pass December 2021 Geologist Licensure Examination</h2>
                                   <p class="card-text fw-lighter">MANILA, Philippines — A total of 79 of 142 passed the December 2021 Geologist Licensure Examination, the Professional Regulation Commission (PRC) announced on Wednesday.</p>
-                                  <a class="btn btn-warning fw-light" href="Front news 8.html">Read more →</a>
+                                  <a class="btn btn-warning fw-light" href="Front News 8.html">Read more →</a>
                               </div>
                           </div>
 
@@ -102,7 +102,7 @@
                                     <div class="small text-muted">November 22, 2021</div>
                                     <h2 class="card-title h4 fw-normal">Get Mapúa’s premier engineering and IT education from home through its fully online programs</h2>
                                     <p class="card-text fw-lighter">A good college education is one of the most rewarding achievements a person can have. Getting an academic degree from a reputable institution presents numerous opportunities for individuals seeking to launch their careers successfully.</p>
-                                    <a class="btn btn-warning fw-light" href="Front news 11.html">Read more →</a>
+                                    <a class="btn btn-warning fw-light" href="Front News 11.html">Read more →</a>
                                 </div>
                             </div>
                         </div>
