--- a/homepage2.html
+++ b/homepage2.html
@@ -84,7 +84,7 @@
                                   <div class="small text-muted">June 7, 2021</div>
                                   <h2 class="card-title h4 fw-normal"> Mapua’s Adrian Clarence Nocum shows resourceful nature beyond the court</h2>
                                   <p class="card-text fw-lighter">Extraordinary times call for extraordinary measures, even for a student-athlete like Adrian Clarence Nocum of the Mapua University.</p>
-                                  <a class="btn btn-warning fw-light" href="Front news 7.html">Read more →</a>
+                                  <a class="btn btn-warning fw-light" href="Front News 7.html">Read more →</a>
                               </div>
                           </div>
                         </div>
