--- a/homepage3.html
+++ b/homepage3.html
@@ -59,7 +59,7 @@
                                   <div class="small text-muted">May 28, 2021</div>
                                   <h2 class="card-title h4 fw-normal">Online programs to ensure learners a chance to attain their diplomas and complete their education</h2>
                                   <p class="card-text fw-lighter">Mapúa University is ensuring learning continuity for those with strong albeit hampered educational aspirations through its fully online programs.</p>
-                                  <a class="btn btn-warning fw-light" href="Front news 10.html">Read more →</a>
+                                  <a class="btn btn-warning fw-light" href="Front News 10.html">Read more →</a>
                               </div>
                           </div>
                           <!-- Blog post-->
@@ -81,7 +81,7 @@
                                     <div class="small text-muted">April 22, 2021</div>
                                     <h2 class="card-title h4 fw-normal"> Mapua’s outcomes-based education designed to provide promising future for graduates</h2>
                                     <p class="card-text fw-lighter">The Covid-19 pandemic has brought about changes in the employment space, pointing to an urgent demand for more digital-focused skills, a cue for students to zero in on digital-related programs.</p>
-                                    <a class="btn btn-warning fw-light" href="Front news 6.html">Read more →</a>
+                                    <a class="btn btn-warning fw-light" href="Front News 6.html">Read more →</a>
                                 </div>
                             </div>
                         </div>
