Update Front News 1.html

--- a/Front News 1.html
+++ b/Front News 1.html
@@ -34,7 +34,7 @@
         	</div>
         </nav>
         <!-- Page Header-->
-        <header class="masthead" style="background-image: url('Front News/pictures/Environmental engineering.jpg')">
+        <header class="masthead" style="background-image: url('Front news/pictures/Environmental engineering.jpg')">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
@@ -61,7 +61,7 @@
                         <p>Magat was recognized during the 32nd Grand Alumni Virtual Homecoming organized by MIT Civil Engineer Environmental Sanitary Engineer (CE-EnSE) Alumni Association Inc.</p>
                         <p>MIT CE-EnSE Alumni Association Inc., President Engr. Adam Abinales, First Vice President and Homecoming Chair Engr. Jose Fernandez III conferred the award to Magat.</p>
                         <p>Magat expressed his gratitude for receiving the award and dedicated his achievement to his family and colleagues in CDC.</p>
-                        <a href="#!"><img class="img-fluid" src="Front News/pictures/Rogelio Magat.jpg" alt="..." /></a>
+                        <a href="#!"><img class="img-fluid" src="Front news/pictures/Rogelio Magat.jpg" alt="..." /></a>
                         <span class="caption text-muted">Engineer Rogelio Magat</span>
                         <p>Magat holds two licenses as an engineer. He is a certified civil engineer as well as a registered environmental and sanitary engineer.</p>
                         <p>He graduated from MIT with a bachelor’s degree in civil engineering in 1989 and another degree in environmental and sanitary engineering in 1990. In the same year, he passed both Board Examinations for his degrees.</p>
