Update Front News 2.html

--- a/Front News 2.html
+++ b/Front News 2.html
@@ -34,7 +34,7 @@
         	</div>
         </nav>
         <!-- Page Header-->
-        <header class="masthead" style="background-image: url('Front News/pictures/Sustainable engineering.jpg')">
+        <header class="masthead" style="background-image: url('Front news/pictures/Sustainable engineering.jpg')">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
@@ -62,7 +62,7 @@
                         <p>Sejera, a Mapua University Electronics and Communications Engineering (ECE) alumnus, shared in an email interview that they plan to "return to our respective institutions and carry out knowledge transfer to aspiring students in the field of science and technology.</p>
                         <p>Carvey Ehren Maigue, a Mapúa Electrical Engineering student, also became the first ever Sustainability Winner of the James Dyson Award in 2020 for inventing the AuREUS System, which can generate electricity by absorbing the UV light and allow people to access renewable energy.</p>
                         <p>Mapua University President Dr. Reynaldo Vea expressed his appreciation for the ingenuity exhibited by the students and graduates of the Yuchengco-led University.</p>
-                        <a href="#!"><img class="img-fluid" src="Front News/pictures/Reynaldo Vea.jpg" alt="..." /></a>
+                        <a href="#!"><img class="img-fluid" src="Front news/pictures/Reynaldo Vea.jpg" alt="..." /></a>
                         <span class="caption text-muted">Mapua University President Reynaldo Vea </span>
                         <blockquote class="blockquote">"This achievement in which our proud alumnus is part of implies that Philippine space engineering exists and is growing. The creation of Maya-2, the country's second nanosatellite, received great local and international support, which we should see as a serious undertaking nowadays in our country that our young hopefuls should be looking out for," <b>Vea said of Sejera's accomplishment.</b></blockquote>
                         <p>Likewise, he praised Maigue's achievement and breakthrough effort on sustainable power.</p>
