Update Front News 3.html

--- a/Front News 3.html
+++ b/Front News 3.html
@@ -34,7 +34,7 @@
         	</div>
         </nav>
         <!-- Page Header-->
-        <header class="masthead" style="background-image: url('Front News/pictures/Malayan colleges.png')">
+        <header class="masthead" style="background-image: url('Front news/pictures/Malayan colleges.png')">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
@@ -60,7 +60,7 @@
                         <p>The Mapua Malayan Digital College (MMDC), which operates under MCL, will start holding classes for School Year 2022-2023 in August.</p>
                         <p>For its first year, the MMDC will offer degree programs in information technology and business administration, its chief learning officer Derrick Latreille said at the college's virtual launch event.</p>
                         <p>Online synchronous classes are required only once a week for an hour and a half, Latreille said, adding that the setup minimizes the chances of students encountering internet issues since learning would take place mostly through asynchronous sessions.</p>
-                        <a href="#!"><img class="img-fluid" src="Front News/pictures/Synchronous classes.jpg" alt="..." /></a>
+                        <a href="#!"><img class="img-fluid" src="Front news/pictures/Synchronous classes.jpg" alt="..." /></a>
                         <span class="caption text-muted">Synchronous Classes</span>
                         <blockquote class="blockquote">"We don't have the typical lectures and typical tests. Instead, every class is structured around projects, problems and cases, which means we don't give you a test at the end," <b>Latreille said.</b></blockquote>
                         <blockquote class="blockquote">"We evaluate what you produce, the outputs you produce during and at the end of your 12-week course," <b>he explained.</b></blockquote>
