Update Front News 4.html

--- a/Front News 4.html
+++ b/Front News 4.html
@@ -34,7 +34,7 @@
         	</div>
         </nav>
         <!-- Page Header-->
-        <header class="masthead" style="background-image: url('Front News/pictures/Mapua university.jpg')">
+        <header class="masthead" style="background-image: url('Front news/pictures/Mapua university.jpg')">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
@@ -63,7 +63,7 @@
                         <blockquote class="blockquote">“can stand shoulder-to-shoulder with the world’s top institutions when it comes to actual real-world impact.”</blockquote>
                         <blockquote class="blockquote">“It is proof that our community is able to affect change in our society, in our classrooms, to our research and creative work, and our social development programs,” <b>Yap said.</b></blockquote>
                         <p>ADMU was followed by the De La Salle University, which was listed in the 401 to 600 bracket.</p>
-                        <a href="#!"><img class="img-fluid" src="Front News/pictures/Top Universities.jpg" alt="..." /></a>
+                        <a href="#!"><img class="img-fluid" src="Front news/pictures/Top Universities.jpg" alt="..." /></a>
                         <span class="caption text-muted">Top Universities</span>
                         <p>Other universities included in the list were the University of Santo Tomas and the Tarlac Agricultural University in the 601 to 800 bracket, and the Mapua University in the 801 to 1,000 bracket.</p>
                         <p>TAU, located in Camiling, Tarlac, is the only public university among the five tertiary institutions. Its major programs include agriculture, biosystems engineering, food technology, veterinary medicine, forestry and other agriculture-related programs.</p>
