Update Front News 5.html

--- a/Front News 5.html
+++ b/Front News 5.html
@@ -34,7 +34,7 @@
         	</div>
         </nav>
         <!-- Page Header-->
-        <header class="masthead" style="background-image: url('Front News/pictures/Mark Bantugon.jpg')">
+        <header class="masthead" style="background-image: url('Front news/pictures/Mark Bantugon.jpg')">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
@@ -59,7 +59,7 @@
                         <p>MAPÚA University graduate student Mark Kennedy Bantugon has invented a game changer for global aviation and the local agricultural sector.</p>
                         <p>The “Pili Seal”—a two-component sealant made from the waste material of pili-tree resin, or spent or de-oiled resin—stole the show at the Philippine leg of the James Dyson Awards 2021, where Bantugon was hailed as national winner. If successful, it could create the country’s first aviation-sealant industry, and stimulate a sustainable manufacturing activity in the countryside.</p>
                         <p>Composed of a base and a hardener, the sealant proved strong, reliable, impermeable and heat resistant—ideal for aircraft components that are constantly exposed to liquids and the elements.</p>
-                        <a href="#!"><img class="img-fluid" src="Front News/pictures/Pili seal.jpg" alt="..." /></a>
+                        <a href="#!"><img class="img-fluid" src="Front news/pictures/Pili seal.jpg" alt="..." /></a>
                         <span class="caption text-muted">Pili Seal</span>
                         <h2 class="section-heading">Where it all began</h2>
                         <p>THE process, however, was not easy pickings. It took the young inventor more than 18 months to develop the sealant.</p>
