--- a/Front News 8.html
+++ b/Front News 8.html
@@ -14,7 +14,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,700;0,900;1,500&display=swap" rel="stylesheet">
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="Front News/css/styles.css" rel="stylesheet" />
+        <link href="Front news/css/styles.css" rel="stylesheet" />
     </head>
     <body>
         <!-- Navigation-->
@@ -34,7 +34,7 @@
         	</div>
         </nav>
         <!-- Page Header-->
-        <header class="masthead" style="background-image: url('Front News/pictures/geology.jpg')">
+        <header class="masthead" style="background-image: url('Front news/pictures/geology.jpg')">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
