--- a/Front News 9.html
+++ b/Front News 9.html
@@ -14,7 +14,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,700;0,900;1,500&display=swap" rel="stylesheet">
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="Front News/css/styles.css" rel="stylesheet" />
+        <link href="Front news/css/styles.css" rel="stylesheet" />
     </head>
     <body>
         <!-- Navigation-->
@@ -34,7 +34,7 @@
         	</div>
         </nav>
         <!-- Page Header-->
-        <header class="masthead" style="background-image: url('Front News/pictures/education.jpg')">
+        <header class="masthead" style="background-image: url('Front news/pictures/education.jpg')">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
@@ -56,7 +56,7 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <p>Edukasyon sa gitna at pagkatapos ng pandemya ang pinagtuunan ng pansin ni presidential aspirant Leni Robredo sa kaniyang pagharap sa mga estudyante ng Mapua University. Giit ni Robredo, dapat isulong ang ligtas na balik-eskuwela. Nagpa-Patrol, Adrian Ayalin. TV Patrol, Biyernes, 28 Enero 2022</p>
-                        <img class="img-fluid" src="Front News/pictures/leni.jpg" alt="..." />
+                        <img class="img-fluid" src="Front news/pictures/leni.jpg" alt="..." />
                         <span class="caption text-muted">Leni Robredo</span>
                         <p>
                             References:
