Update Front News 11.html

--- a/Front News 11.html
+++ b/Front News 11.html
@@ -14,7 +14,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,700;0,900;1,500&display=swap" rel="stylesheet">
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="Front News/css/styles.css" rel="stylesheet" />
+        <link href="Front news/css/styles.css" rel="stylesheet" />
     </head>
     <body>
         <!-- Navigation-->
@@ -34,7 +34,7 @@
         	</div>
         </nav>
         <!-- Page Header-->
-        <header class="masthead" style="background-image: url('Front News/pictures/Mapua university.jpg')">
+        <header class="masthead" style="background-image: url('Front news/pictures/Mapua university.jpg')">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
@@ -57,7 +57,7 @@
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <p>A good college education is one of the most rewarding achievements a person can have. Getting an academic degree from a reputable institution presents numerous opportunities for individuals seeking to launch their careers successfully. Mapúa University, an enabler of Filipinos’ successes here in the country and abroad, understands this very well and ensures that its program offerings meet the desired outcomes of learners under any circumstance.</p>
                         <p>Mapúa is a top-ranked university in Asia, as declared by Quacquarelli Symonds (QS), with internationally recognized program offerings. It is a known trailblazer in Philippine education with significant contributions to reforming the traditional learning setup. Over the years, it has harnessed the potential and power of digital technology in delivering leading-edge education to learners, constantly innovating delivery methods that break geographical, time, and eventual barriers. This makes Mapúa a recognized leader in digital education and online learning in the Philippines and one of the most digital-ready universities in Asia.</p>
-                        <img class="img-fluid" src="Front News/pictures/fully online.jpg" alt="..." />
+                        <img class="img-fluid" src="Front news/pictures/fully online.jpg" alt="..." />
                         <span class="caption text-muted">Fully online learning</span>
                         <h2 class="section-heading">Upholding excellence in digital learning</h2>
                         <p>Mapúa’s most recent remarkable undertaking for digital education is the launching of Mapúa ÚOx or the Ubiquitous Online Experience. It is its initiative in delivering fully online bachelor’s degree programs through its very own platform Cardinal EDGE or Education in a Digital and Global Environment.</p>
