Update Front News 12.html

--- a/Front News 12.html
+++ b/Front News 12.html
@@ -14,7 +14,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,700;0,900;1,500&display=swap" rel="stylesheet">
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="Front News/css/styles.css" rel="stylesheet" />
+        <link href="Front news/css/styles.css" rel="stylesheet" />
     </head>
     <body>
         <!-- Navigation-->
@@ -34,7 +34,7 @@
         	</div>
         </nav>
         <!-- Page Header-->
-        <header class="masthead" style="background-image: url('Front News/pictures/Mapua university.jpg')">
+        <header class="masthead" style="background-image: url('Front news/pictures/Mapua university.jpg')">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
@@ -58,7 +58,7 @@
                         <p>The Commission on Higher Education (CHEd) and Mapua University revealed on Tuesday that they are starting to equip the country's 45 Higher Education Institutions (HEIs) with data science and analytics skills for the post-Covid-19 pandemic world, following the launching of the Data Analytics and Digital Transformation Training for Higher Education, an executive program delivered by Carnegie Mellon University-Australia (CMUA), a global leader in data analytics.</p>
                         <p>The program is a 10-day virtual training that combines a comprehensive business intelligence, data analytics and technology management curriculum with a hands-on focus.</p>
                         <p>The 60 participants, who come from 45 HEIs all around the Philippines, are taught by CMUA’s expert pool of faculty who are also industry experts, with many active industry collaborations that put them at the forefront of data science developments.</p>
-                        <img class="img-fluid" src="Front News/pictures/Study data.png" alt="..." />
+                        <img class="img-fluid" src="Front news/pictures/Study data.png" alt="..." />
                         <span class="caption text-muted">Data Science</span>
                         <p>The participating HEIs are Agusan Del Sur State College of Agriculture and Technology, Aklan State University, Angeles University Foundation, Apayao State College, Ateneo De Davao University, Benguet State University, Biliran Province State University, Cebu Technological University-Main Campus, Davao Del Sur State College, De La Salle Medical and Health Institute, De La Salle Medical and Health Sciences Institute, Divine Word College of Bangued, Don Mariano Marcos Memorial State University, Don Mariano Marcos Memorial State University (Mid-La Union Campus), Ifugao State University, Iloilo State University, Iloilo State College of Fisheries, Kalinga State University, Leyte Normal University, Manuel S. Enverga University Foundation, Mapua University, Mariano Marcos State University, Marikina Polytechnic College, Monkayo College of Arts, Sciences and Technology, Mountain Province State Polytechnic College, New Era University, Northern Iloilo Polytechnic State College and Batad Campus, Polytechnic University of the Philippines, President Ramon Magsaysay State University, Quezon City University, Saint Francis of Assisi College, St. Anthony's College, St. Paul University Philippines, Systems Technology Institute (STI), STI College Surigao, Tarlac State University, University of Mindanao, University of Nueva Caceres-Bataan, University of Perpetual Help Sytem DALTA Molino, University of Southeastern Philippines, University of Southern Philippines Mintal Campus, University of the Cordilleras, University of the Philippines, Wesleyan University-Philippines.</p>
                         <p>The opening program was attended by CHEd Chairman J. Prospero De Vera 3rd, Mapua President Dr. Reynaldo Vea, Carnegie Mellon University-Australia Head Professor Emil Bolongaita and CHEd Offier-In-Charge Executive Director and International Affairs Staff Director Lily Freida Milla.</p>
