--- a/Front News 1.html
+++ b/Front News 1.html
@@ -81,4 +81,8 @@
             <div class="container"><p class="m-0 text-center text-white">Get in touch with us at hubmapua@gmail.com</p></div>
         </footer>
     </body>
+    <!-- Bootstrap core JS-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Core theme JS-->
+        <script src="js/scripts.js"></script>
 </html>
