--- a/sports3.html
+++ b/sports3.html
@@ -77,5 +77,9 @@
         <footer class="py-5 bg-dark">
             <div class="container"><p class="m-0 text-center text-white">Get in touch with us at hubmapua@gmail.com</p></div>
         </footer>
+	 <!-- Bootstrap core JS-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Core theme JS-->
+        <script src="js/scripts.js"></script>
     </body>
 </html>
